# easy-equities-client

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  pyproject.toml.old
.github/workflows/: continuous_integration.yml
examples/: download_transactions_to_csv.py  get_transactions_deprecated.py  get_transactions_for_period.py  get_transactions_year.py  show_holdings_profit_loss.py
src/easy_equities_client/: __init__.py  clients.py  constants.py  types.py
src/easy_equities_client/accounts/: clients.py  parsers.py  types.py
src/easy_equities_client/instruments/: clients.py  types.py
src/easy_equities_client/utils/: currencies.csv  currencies.py  dataclasses.py
tests/: conftest.py  test_clients.py
tests/accounts/: test_clients.py  test_parsers.py
