[project]
name = "easy-equities-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "lxml>=6.0.2",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "requests-mock>=1.12.1",
]
lint = [
    "ruff>=0.15.5",
]
